fix: improve input box height on smaller displays

--- a/css/index.scss
+++ b/css/index.scss
@@ -120,7 +120,7 @@ li {
 
 @media screen and (min-width: $tablet) {
   #sankey-input-box {
-    height: 40vh;
+    height: 45vh;
   }
 
   #sankey-svg {
